log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 05:39:11 PM UTC: 
 tests:  0|6
total_score: 0/70
e6c1669
Fri 31 Mar 2023 05:50:38 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:36: error: expected ‘)’ before ‘;’ token
   17 |   list->data = malloc(sizeof(void*);
      |                      ~             ^
      |                                    )
arraylist.c:18:15: error: expected ‘;’ before ‘}’ token
   18 |   return list;
      |               ^
      |               ;
   19 | }
      | ~              
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8bb3d5a
Fri 31 Mar 2023 05:50:52 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d636477
Fri 31 Mar 2023 05:54:05 PM UTC: 
 arraylist.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
65eee5c
Fri 31 Mar 2023 05:54:38 PM UTC: 
 arraylist.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
e6014a3
Fri 31 Mar 2023 05:56:58 PM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
419a06f
Fri 31 Mar 2023 05:57:22 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a80d434
Fri 31 Mar 2023 06:01:13 PM UTC: 
 arraylist.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
48d0f99
Fri 31 Mar 2023 06:02:30 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|4
total_score: 20/70
0b788e0
Fri 31 Mar 2023 06:11:14 PM UTC: 
 arraylist.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|0
6bda0d5
Fri 31 Mar 2023 06:11:37 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5b4fec4
Fri 31 Mar 2023 06:13:33 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9b3c622
Fri 31 Mar 2023 06:13:46 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
6d2c95e
Fri 31 Mar 2023 06:16:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d259bc3
Fri 31 Mar 2023 06:16:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
388d1da
Fri 31 Mar 2023 06:17:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c249dc6
Fri 31 Mar 2023 06:17:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
9662941
Fri 31 Mar 2023 06:18:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
8b7c145
Fri 31 Mar 2023 06:18:28 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
1ae2b5b
Fri 31 Mar 2023 06:24:17 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
b5eb991
Fri 31 Mar 2023 06:24:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6ed6784
Fri 31 Mar 2023 06:25:17 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|2
total_score: 40/70
de082ef
Fri 31 Mar 2023 06:30:16 PM UTC: 
 arraylist.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  8|2
total_score: 40/70
2291062
Fri 31 Mar 2023 06:30:33 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a5c45ca
Fri 31 Mar 2023 06:30:41 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|2
total_score: 40/70
c77ba0f
Fri 31 Mar 2023 06:31:09 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 40/70
95cfe7b
Fri 31 Mar 2023 06:32:17 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/70
b3bc59d
Fri 31 Mar 2023 06:34:47 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:63:3: error: ‘list’ undeclared (first use in this function)
   63 |   list->size = 0;
      |   ^~~~
arraylist.c:63:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ace6edd
Fri 31 Mar 2023 06:34:58 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:64:8: error: ‘list’ undeclared (first use in this function)
   64 |   free(list->data);
      |        ^~~~
arraylist.c:64:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b89d9d7
Fri 31 Mar 2023 06:35:03 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
e3d3a53
Fri 31 Mar 2023 06:37:08 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|1
total_score: 60/70
94ff447
Fri 31 Mar 2023 06:39:15 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|1
total_score: 60/70
50f1b6d
Fri 31 Mar 2023 06:40:09 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:66:3: error: ‘list’ undeclared (first use in this function)
   66 |   list->data = malloc(sizeof(void*));
      |   ^~~~
arraylist.c:66:3: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:67:33: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   67 |   if(list->data == NULL) return NULL;
      |                                 ^~~~
arraylist.c:62:6: note: declared here
   62 | void clean(ArrayList * l){
      |      ^~~~~
cc1: all warnings being treated as errors
Compilation failed
8c9555e
Fri 31 Mar 2023 06:40:18 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:66:3: error: ‘list’ undeclared (first use in this function)
   66 |   list->data = malloc(sizeof(void*));
      |   ^~~~
arraylist.c:66:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c50dd62
Fri 31 Mar 2023 06:40:27 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:67:30: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   67 |   if(l->data == NULL) return NULL;
      |                              ^~~~
arraylist.c:62:6: note: declared here
   62 | void clean(ArrayList * l){
      |      ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0c34d49
Fri 31 Mar 2023 06:40:37 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|1
total_score: 60/70
0305622
Fri 31 Mar 2023 06:40:47 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|1
total_score: 60/70
863506e
Sat 01 Apr 2023 08:39:30 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|1
total_score: 60/70
35cb601
Sat 01 Apr 2023 08:50:02 PM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
b7831c9
Sat 01 Apr 2023 08:51:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
639a236
Sat 01 Apr 2023 08:51:59 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
448374a
Sat 01 Apr 2023 08:52:30 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
17c465c
Sat 01 Apr 2023 08:53:01 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
61e934a
Sat 01 Apr 2023 08:53:22 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6a69f5f
Sat 01 Apr 2023 08:54:09 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|1
total_score: 60/70
02136eb
Sat 01 Apr 2023 08:54:59 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|1
total_score: 60/70
2ab6827
